# PasswordManager2.0

./: .gitignore  .gitmodules  CMakeLists.txt  PassManager2.sln  README.md  openapi.yaml
frontend/PasswordManagerWeb/Controllers/: HomeController.cs  UserController.cs
frontend/PasswordManagerWeb/Models/: ErrorViewModel.cs
frontend/PasswordManagerWeb/Properties/: launchSettings.json
frontend/PasswordManagerWeb/Views/: _ViewImports.cshtml
frontend/PasswordManagerWeb/Views/Shared/: _Layout.cshtml
frontend/PasswordManagerWeb/Views/User/: Login.cshtml
include/: AccountManager.h  CLI.h  DatabaseManager.h  EncryptionManager.h  EnvUtils.h  JWTManager.h  Logger.h  PasswordGenerator.h  PasswordHasher.h  StatementWrapper.h  UserManager.h  WebServer.h
src/: AccountManager.cpp  CLI.cpp  DatabaseManager.cpp  EncryptionManager.cpp  JWTManager.cpp  Logger.cpp  PasswordGenerator.cpp  PasswordHasher.cpp  StatementWrapper.cpp  UserManager.cpp  WebServer.cpp  main.cpp  main_web.cpp
tests/: CMakeLists.txt  test_account_manager.cpp  test_database_manager.cpp  test_user_manager.cpp
